Improvements and Bug Fixes
Toggles from the View submenu are now saved between sessions. Only
Fullscreen will default to being toggled off since the user can never
load the page in Fullscreen anyway.

Dialogs are now horizontally resiazble. The small slivers on the sides
of the dialog will now show an ew-resize cursor showing that they can be
used for resizing. Dialogs still have a min-width of 50vw to prevent the
content from being too squished in the middle, but they can also be
fully resized to take up 100% of the screen if the user wants.

Fixed a bug where presets weren't working as intended (File > New...).

View > Toolbar has been implemented now so the user can hide or show the
top toolbar.

The <iframe>s displaying the presets are now more accurately scaled.
Previously, the <body> font-size was set to 4vh to shrink down the text,
but it usually led to pretty inaccurate representations of the preset.
Now, <iframe>s are scaled to take up the fullscreen, and then scaled
down (using CSS). This not only guarantees accuracy, but also ensures
the <iframe>s height/width proportion matches that of the user's
monitor.

Links inside preset <iframe>s no longer redirect the user to a new page
if they accidentally click on one.

Ctrl + Shift + F is now an alternate shortcut for fullscreen for users
with no F11 key on their keyboard.

Fixed a bug where going into fullscreen would shrink the page on Chrome.
Also fixed a bug where window.onfullscreenchange wasn't being called
since that event only existed for document.

New back button on File > New... > New Preset... that leads back to File
> New...

DraggableElements.js has been given its own spot in the script directory
now for development purposes and to include the DraggableElement
constructor under window.HTMLStudio like the other constructors.

--- a/css/deferredElements.css
+++ b/css/deferredElements.css
@@ -134,9 +134,14 @@
 }
 
 #idy {
-	width: calc(40vw - 3.6em);
-	height: calc(calc(40vw - 3.6em) * 0.5622262558930485);
-	margin-top: 2em;
+	width: 100vw;
+	height: 100vh;
+	-webkit-transform: scale(.4);
+	transform: scale(.4);
+	-webkit-transform-origin: bottom center;
+	transform-origin: bottom center;
+	margin: -60vh -30vw 0;
+	border: 0;
 }
 
 #idA, #Ida {
@@ -238,6 +243,8 @@
 
 #Ide {
 	margin: .5em -1px 2em;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
 	background: #F5F5F5;
 	color: #456;
@@ -248,6 +255,8 @@
 }
 
 #Ide div {
+	-webkit-box-flex: 1;
+	-ms-flex-positive: 1;
 	flex-grow: 1;
 	padding: .3em;
 	border-radius: .3em;
@@ -270,6 +279,13 @@
 
 #Idg {
 	padding: .3em;
+}
+
+#Idi {
+	border: 1px solid #000;
+	display: inline-block;
+	box-shadow: .2rem .2rem .4rem 0 rgba(80,80,80,.8);
+	margin-top: 2em;
 }
 
 .cl9 {
@@ -316,11 +332,21 @@
 }
 
 .cl5 {
-	height: 9.0754vw;
-	width: 16.1419vw;
-	border: 1px solid #000;
+	display: inline-block;
+	border: 1px solid black;
+	line-height: 0;
 	box-shadow: .2rem .2rem .4rem 0 rgba(80,80,80,.8);
-	margin: -1px;
+}
+
+.cl5 iframe {
+	height: 100vh;
+	width: 100vw;
+	-webkit-transform: scale(.161419);
+	transform: scale(.161419);
+	margin: -83.8581vh calc(-41.92905vw + 1px) 0 -41.92905vw;
+	border: 0;
+	-webkit-transform-origin: bottom center;
+	transform-origin: bottom center;
 }
 
 .cl6 {
@@ -398,15 +424,19 @@ html-element-replacer {
 }
 
 .rectX {
-	width: 100%;
+	width: calc(100% - 4px);
 	height: 0;
 	padding: 0 2px;
+	border-left: 0;
+	border-right: 0;
 }
 
 .rectY {
 	width: 0;
-	height: 100%;
+	height: calc(100% - 4px);
 	padding: 2px 0;
+	border-top: 0;
+	border-bottom: 0;
 }
 
 .rectXT, .rectYT {
@@ -439,4 +469,27 @@ html-element-replacer {
 
 label, label input[type=checkbox] {
 	cursor: pointer;
+}
+
+.dialog_resizer_left, .dialog_resizer_right {
+	top: -1px;
+	position: absolute;
+	height: 100%;
+	width: .5em;
+	cursor: ew-resize;
+	border: 1px solid transparent;
+}
+
+.dialog_resizer_left {
+	left: -1px;
+	border-bottom-left-radius: .6em;
+	border-top-left-radius: .6em;
+	border-right-width: 0;
+}
+
+.dialog_resizer_right {
+	left: calc(50vw - .5em);
+	border-bottom-right-radius: .6em;
+	border-top-right-radius: .6em;
+	border-left-width: 0;
 }
